<resources>
    <string name="app_name">V3Games</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">V3GAMES</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="inicio">Inicio</string>
    <string name="carrito">Carrito de compras</string>
    <string name="deseo">Lista de deseos</string>
    <string name="Cuenta">Mi cuenta</string>
    <string name="juegos">Mis juegos</string>
    <string name="acercade">Acerca de</string>
    <string name="info">Información</string>
</resources>
